cloud/experiments/spacebar/ingress-route/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: spacebar
spec:
  hostnames:
  - spacebar.suffix-automatic-replace
  parentRefs:
  - kind: Gateway
    namespace: gateways
    name: main-public
    sectionName: https-main
  rules:
  - backendRefs:
    - kind: Service
      name: spacebar
      port: 80
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        - name: Access-Control-Allow-Origin
          value: '*'
